fix for marcxml

--- a/standards/index.html
+++ b/standards/index.html
@@ -36,7 +36,7 @@ and key standards-settings organizations." />
               well as original authority data</li>
               <li><a href="http://www.loc.gov/marc/">MARC 21 formats</a> - Representation
                 and communication of descriptive metadata about information items</li>
-              <li><a href="marcxml/">MARCXML</a> - MARC 21 data in an XML structure</li>
+              <li><a href="https://lcnetdev.github.io/marcxml/">MARCXML</a> - MARC 21 data in an XML structure</li>
               <li><a href="mods/">MODS (Metadata Object Description Standard)</a> -
                 XML markup for selected metadata from existing MARC 21 records
                 as well as original resource description</li>
