--- a/ead/ead3available.html
+++ b/ead/ead3available.html
@@ -33,7 +33,7 @@
 <input type="hidden" name="rq" value="0">
 <input type="hidden" name="qc" value="">
 <table align="center" class="header" cellpadding="0" cellspacing="0" border="0"><tr><td width="475"><a id="skip" href="#skip_menu">&nbsp;</a>
-  <div class="sitenav"><a href="http://www.loc.gov/">The Library of Congress</a>&nbsp;&raquo;&nbsp;<a href="http://www.loc.gov/standards/">Standards</a>&nbsp;&raquo;&nbsp;<a href="index.html">EAD</a></div></td>
+  <div class="sitenav"><a href="http://lcnetdev.github.io/">The Library of Congress</a>&nbsp;&raquo;&nbsp;<a href="http://lcnetdev.github.io/standards/">Standards</a>&nbsp;&raquo;&nbsp;<a href="index.html">EAD</a></div></td>
 <td width="116"><select name="qp" tabindex="1">
 <option value="url:/ead" selected>EAD Official Site Pages</option>
 <option value="url:/standards url:/ead url:/marc">Standards Pages</option>
@@ -54,7 +54,7 @@
 	  <p>&nbsp;</p><p>Dear EAD community,</p>
       <p>After five years of work, the Technical Subcommittee for  Encoded Archival Description is thrilled to announce that EAD3 is ready!</p>
       <p>EAD3 1.0 is available to download from GitHub at&nbsp;<a href="https://github.com/SAA-SDT/EAD3/releases/tag/v1.0.0">https://github.com/SAA-SDT/EAD3/releases/tag/v1.0.0</a>.  The release package can be downloaded as a .zip or .tar.gz, and contains the  full set of <a href="https://github.com/SAA-SDT/EAD3">EAD3 schemas</a>: Relax NG, W3C, and DTD (in regular and undeprecated  varieties); the ancillary Schematron schema for validating external code lists,  standard data patterns, element or attribute co-occurrence, and a few examples  of suggested encoding practice; release notes; a readme file; and the license  (CC0).</p>
-      <p>The official Library of Congress EAD site (<a href="http://www.loc.gov/ead/">http://www.loc.gov/ead/</a>) will be updated  with links to the download package and with the tag library soon after the  annual meeting. The EAD3 Tag Library will be available for sale at the SAA  Annual Meeting and soon thereafter on SAA's Web site. The migration style sheet  is still in development - stay tuned for that release in the coming weeks as  well.</p>
+      <p>The official Library of Congress EAD site (<a href="http://lcnetdev.github.io/ead/">http://lcnetdev.github.io/ead/</a>) will be updated  with links to the download package and with the tag library soon after the  annual meeting. The EAD3 Tag Library will be available for sale at the SAA  Annual Meeting and soon thereafter on SAA's Web site. The migration style sheet  is still in development - stay tuned for that release in the coming weeks as  well.</p>
       <p>As happy as the committee is to see our work on EAD3 come to  fruition, it will be vastly more gratifying to see you, the user community,  adopt it and use it in practical, exciting, and even surprising ways. If you  have any questions along the way, we will be happy to clarify as best we can.  More information about the ongoing maintenance of EAD will be forthcoming soon.</p>
       <p>Finally, on behalf of TS-EAD, thank you for your support,  feedback, and patience throughout the revision process.&nbsp;</p>
       <p>Sincerely,</p>
@@ -69,8 +69,8 @@
 </tr>
 
 </table>
-<table align="center" class="footer" cellpadding="0" cellspacing="0" border="0"><tr valign="top"><td><div class="sitenav"><a href="http://www.loc.gov/">The
-          Library of Congress</a>&nbsp;&raquo;&nbsp;<a href="http://www.loc.gov/standards/">Standards</a>&nbsp;&raquo;&nbsp;<span class="selected">EAD</span></div>
+<table align="center" class="footer" cellpadding="0" cellspacing="0" border="0"><tr valign="top"><td><div class="sitenav"><a href="http://lcnetdev.github.io/">The
+          Library of Congress</a>&nbsp;&raquo;&nbsp;<a href="http://lcnetdev.github.io/standards/">Standards</a>&nbsp;&raquo;&nbsp;<span class="selected">EAD</span></div>
       <br>
   <span class="sitenav">
   <!-- #BeginDate format:Am1 -->August 28, 2015<!-- #EndDate -->
