--- a/ead/ead3htmltaglib.html
+++ b/ead/ead3htmltaglib.html
@@ -33,7 +33,7 @@
 <input type="hidden" name="rq" value="0">
 <input type="hidden" name="qc" value="">
 <table align="center" class="header" cellpadding="0" cellspacing="0" border="0"><tr><td width="475"><a id="skip" href="#skip_menu">&nbsp;</a>
-  <div class="sitenav"><a href="http://www.loc.gov/">The Library of Congress</a>&nbsp;&raquo;&nbsp;<a href="http://www.loc.gov/standards/">Standards</a>&nbsp;&raquo;&nbsp;<a href="index.html">EAD</a></div></td>
+  <div class="sitenav"><a href="http://lcnetdev.github.io/">The Library of Congress</a>&nbsp;&raquo;&nbsp;<a href="http://lcnetdev.github.io/standards/">Standards</a>&nbsp;&raquo;&nbsp;<a href="index.html">EAD</a></div></td>
 <td width="116"><select name="qp" tabindex="1">
 <option value="url:/ead" selected>EAD Official Site Pages</option>
 <option value="url:/standards url:/ead url:/marc">Standards Pages</option>
@@ -52,7 +52,7 @@
       <h1><a name="skip_menu" id="skip_menu"></a>EAD3 Tag Library Available</h1>
      
 	  <p>All,</p>
-      <p>I'm thrilled to announce that the Encoded Archival  Description Tag Library: Version EAD3 is now available online at the official  EAD site hosted by the Library of Congress (<a href="http://www.loc.gov/ead/">http://www.loc.gov/ead/</a>).  Print and PDF versions of the tag library continue to be available from the  Society of American Archivists (<a href="http://saa.archivists.org/store/encoded-archival-description-tag-library-version-ead3/4701/">http://saa.archivists.org/store/encoded-archival-description-tag-library-version-ead3/4701/</a>).&nbsp;</p>
+      <p>I'm thrilled to announce that the Encoded Archival  Description Tag Library: Version EAD3 is now available online at the official  EAD site hosted by the Library of Congress (<a href="http://lcnetdev.github.io/ead/">http://lcnetdev.github.io/ead/</a>).  Print and PDF versions of the tag library continue to be available from the  Society of American Archivists (<a href="http://saa.archivists.org/store/encoded-archival-description-tag-library-version-ead3/4701/">http://saa.archivists.org/store/encoded-archival-description-tag-library-version-ead3/4701/</a>).&nbsp;</p>
       <p>Like the EAC-CPF Tag Library, the EAD3 Tag Library is  maintained in TEI, from which the HTML version is derived via an XSLT  transformation. The source code for both tag libraries is available on GitHub  at&nbsp;<a href="https://github.com/SAA-SDT/EAS-TagLibraries">https://github.com/SAA-SDT/EAS-TagLibraries</a>.&nbsp;</p>
       <p>The EAD3 Tag Library is shared under a CC-BY license, and  may be used freely with attribution.&nbsp;</p>
       <p>I would be remiss in not acknowledging the excellent work of  Karin Bredenberg, Florence Clavaud, and Terry Catapano in encoding and  transforming the EAD3 Tag Library. It would not be available without their  efforts.</p>
@@ -68,8 +68,8 @@
 </tr>
 
 </table>
-<table align="center" class="footer" cellpadding="0" cellspacing="0" border="0"><tr valign="top"><td><div class="sitenav"><a href="http://www.loc.gov/">The
-          Library of Congress</a>&nbsp;&raquo;&nbsp;<a href="http://www.loc.gov/standards/">Standards</a>&nbsp;&raquo;&nbsp;<span class="selected">EAD</span></div>
+<table align="center" class="footer" cellpadding="0" cellspacing="0" border="0"><tr valign="top"><td><div class="sitenav"><a href="http://lcnetdev.github.io/">The
+          Library of Congress</a>&nbsp;&raquo;&nbsp;<a href="http://lcnetdev.github.io/standards/">Standards</a>&nbsp;&raquo;&nbsp;<span class="selected">EAD</span></div>
       <br>
   <span class="sitenav">
   <!-- #BeginDate format:Am1 -->April 21, 2016<!-- #EndDate -->
