--- a/ead/eaddtd.html
+++ b/ead/eaddtd.html
@@ -37,7 +37,7 @@ by the Library of Congress.">
 <input type="hidden" name="rq" value="0">
 <input type="hidden" name="qc" value="">
 <table align="center" class="header" cellpadding="0" cellspacing="0" border="0"><tr><td width="475"><a id="skip" href="#skip_menu">&nbsp;</a>
-  <div class="sitenav"><a href="http://www.loc.gov/">The Library of Congress</a>&nbsp;&raquo;&nbsp;<a href="http://www.loc.gov/standards/">Standards</a>&nbsp;&raquo;&nbsp;<a href="index.html">EAD</a></div></td>
+  <div class="sitenav"><a href="http://lcnetdev.github.io/">The Library of Congress</a>&nbsp;&raquo;&nbsp;<a href="http://lcnetdev.github.io/standards/">Standards</a>&nbsp;&raquo;&nbsp;<a href="index.html">EAD</a></div></td>
 <td width="116"><select name="qp" tabindex="1">
 <option value="url:/ead" selected>EAD Official Site Pages</option>
 <option value="url:/standards url:/ead url:/marc">Standards Pages</option>
@@ -104,7 +104,7 @@ for content.</p>
 <h2><a name="whattodo"></a>What You Need To Do:</h2>
 <p>To start creating your own Encoded Archival Descriptions, you will need various
 files and support documents.  Most are available to you electronically via
-FTP (File Transfer Protocol) from an anonymous file server.  The EAD Tag Library is currently available as both a print and <a href="http://www.loc.gov/ead/tglib/index.html">Web
+FTP (File Transfer Protocol) from an anonymous file server.  The EAD Tag Library is currently available as both a print and <a href="http://lcnetdev.github.io/ead/tglib/index.html">Web
  version</a>. Due to the length of the EAD Tag Library, we recommend you purchase a copy of the printed document which is available from the <a
 href="http://www.archivists.org/catalog/pubDetail.asp?objectID=235">Society of
 American
@@ -123,7 +123,7 @@ onto your hard drive.</p>
   archive)</li>
 </ul><i>or</i>
 <ul>
-<li><a href="http://www.loc.gov/ead/ead2002.zip">ead2002.zip</a> (zip file)</li>
+<li><a href="http://lcnetdev.github.io/ead/ead2002.zip">ead2002.zip</a> (zip file)</li>
 </ul></p>
 <p>Alternately, you can  FTP download the EAD DTD and other machine-readable
   documents. All you need is access to the Internet and electronic transfer
@@ -174,7 +174,7 @@ extension found during transfer.</p>
 
 <p>If you do not have access to FTP or are not able to download the files, you may request a diskette containing these
 files by contacting the Library of Congress, <a href=
-"http://www.loc.gov/marc/ndmso.html">Network Development and MARC
+"http://lcnetdev.github.io/marc/ndmso.html">Network Development and MARC
 Standards Office (NDMSO)</a>, who will be acting as the maintenance agency for this
 standard. </p>
 <p>We encourage you to join the large number of users of the EAD DTD if you are
@@ -182,7 +182,7 @@ not already among that growing group.  We also look
 forward to getting feedback from you as you make use of Encoded Archival Description for the first
 time.  The EAD DTD is not set in stone but will be enhanced in the future based
 on the experiences of its users.  If you know of anyone else interested
-in this effort, encourage them to download the above EAD DTD files and subscribe to the <a href="http://www.loc.gov/ead/eadlist.html">EAD
+in this effort, encourage them to download the above EAD DTD files and subscribe to the <a href="http://lcnetdev.github.io/ead/eadlist.html">EAD
 electronic forum</a>.</p>
 <p>
 
@@ -194,8 +194,8 @@ electronic forum</a>.</p>
 </tr>
 
 </table>
-<table align="center" class="footer" cellpadding="0" cellspacing="0" border="0"><tr valign="top"><td><div class="sitenav"><a href="http://www.loc.gov/">The
-          Library of Congress</a>&nbsp;&raquo;&nbsp;<a href="http://www.loc.gov/standards/">Standards</a>&nbsp;&raquo;&nbsp;<span class="selected">EAD</span></div>
+<table align="center" class="footer" cellpadding="0" cellspacing="0" border="0"><tr valign="top"><td><div class="sitenav"><a href="http://lcnetdev.github.io/">The
+          Library of Congress</a>&nbsp;&raquo;&nbsp;<a href="http://lcnetdev.github.io/standards/">Standards</a>&nbsp;&raquo;&nbsp;<span class="selected">EAD</span></div>
       <br>
   <span class="sitenav">
   <!-- #BeginDate format:Am1 -->June 5, 2006<!-- #EndDate -->
