--- a/ead/eadother.html
+++ b/ead/eadother.html
@@ -34,7 +34,7 @@ by the Library of Congress.  These links are being provided as a convenience and
 <input type="hidden" name="rq" value="0">
 <input type="hidden" name="qc" value="">
 <table align="center" class="header" cellpadding="0" cellspacing="0" border="0"><tr><td width="475"><a id="skip" href="#skip_menu">&nbsp;</a>
-  <div class="sitenav"><a href="http://www.loc.gov/">The Library of Congress</a>&nbsp;&raquo;&nbsp;<a href="http://www.loc.gov/standards/">Standards</a>&nbsp;&raquo;&nbsp;<a href="index.html">EAD</a></div></td>
+  <div class="sitenav"><a href="http://lcnetdev.github.io/">The Library of Congress</a>&nbsp;&raquo;&nbsp;<a href="http://lcnetdev.github.io/standards/">Standards</a>&nbsp;&raquo;&nbsp;<a href="index.html">EAD</a></div></td>
 <td width="116"><select name="qp" tabindex="1">
 <option value="url:/ead" selected>EAD Official Site Pages</option>
 <option value="url:/standards url:/ead url:/marc">Standards Pages</option>
@@ -115,9 +115,9 @@ by the Library of Congress.  These links are being provided as a convenience and
   1.0 (1998) - Superseded Documentation</span></h2>
   <br/>
   <ul>
-  <li><a href="http://www.loc.gov/ead/tglib1998/index.html">EAD  Tag Library, version
+  <li><a href="http://lcnetdev.github.io/ead/tglib1998/index.html">EAD  Tag Library, version
       1.0 (1998)</a>
-  <li><a href="http://www.loc.gov/ead/ag/aghome.html">EAD Application Guidelines, version 1.0 (1998)</a>  
+  <li><a href="http://lcnetdev.github.io/ead/ag/aghome.html">EAD Application Guidelines, version 1.0 (1998)</a>  
 </ul>
 
 <p>
@@ -161,7 +161,7 @@ by the Library of Congress.  These links are being provided as a convenience and
       and links to archives and manuscript repositories throughout the United States.      </p>
 </blockquote>
 <ul>
-  <li><a href="http://www.loc.gov/coll/nucmc/"> http://www.loc.gov/coll/nucmc/</a></li>
+  <li><a href="http://lcnetdev.github.io/coll/nucmc/"> http://lcnetdev.github.io/coll/nucmc/</a></li>
 </ul>
 <p>
 
@@ -174,7 +174,7 @@ by the Library of Congress.  These links are being provided as a convenience and
   <p>The Online Archive of California (OAC) provides free   public access to detailed descriptions of primary resource collections   maintained by more than <a href="http://www.oac.cdlib.org/institutions/">200 contributing   institutions</a> including libraries, special collections, archives,   historical societies, and museums throughout California and collections   maintained by the 10 University of California (UC) campuses.</p>
 </blockquote>
 <ul>
-  <li><a href="http://www.loc.gov/coll/nucmc/"> http://www.loc.gov/coll/nucmc/</a></li>
+  <li><a href="http://lcnetdev.github.io/coll/nucmc/"> http://lcnetdev.github.io/coll/nucmc/</a></li>
 </ul>
 <p>
 
@@ -252,8 +252,8 @@ by the Library of Congress.  These links are being provided as a convenience and
 </tr>
 
 </table>
-<table align="center" class="footer" cellpadding="0" cellspacing="0" border="0"><tr valign="top"><td><div class="sitenav"><a href="http://www.loc.gov/">The
-          Library of Congress</a>&nbsp;&raquo;&nbsp;<a href="http://www.loc.gov/standards/">Standards</a>&nbsp;&raquo;&nbsp;<span class="selected">EAD</span></div>
+<table align="center" class="footer" cellpadding="0" cellspacing="0" border="0"><tr valign="top"><td><div class="sitenav"><a href="http://lcnetdev.github.io/">The
+          Library of Congress</a>&nbsp;&raquo;&nbsp;<a href="http://lcnetdev.github.io/standards/">Standards</a>&nbsp;&raquo;&nbsp;<span class="selected">EAD</span></div>
       <br>
   <span class="sitenav">
   <!-- #BeginDate format:Am1 -->December 13, 2017<!-- #EndDate -->
