--- a/ead/index.html
+++ b/ead/index.html
@@ -9,7 +9,7 @@
 @import url(ead-base.css);
 </style>
 <meta http-equiv="Content-Language" content="en-us">
-<link rel="shortcut icon" href="http://www.loc.gov/ead/images/favicon.ico">
+<link rel="shortcut icon" href="http://lcnetdev.github.io/ead/images/favicon.ico">
 <meta name="keywords" content="ead home page version 2002 official site schema listserv archive tag library working group">
 <meta name="description" content="The Encoded Archival Description Official Site serves as a resource for the EAD community and those interested in implementing EAD.">
 </head>
@@ -30,7 +30,7 @@
 <input type="hidden" name="rq" value="0">
 <input type="hidden" name="qc" value="">
 <table align="center" class="header" cellpadding="0" cellspacing="0" border="0"><tr><td width="475"><a id="skip" href="#skip_menu">&nbsp;</a>
-  <div class="sitenav"><a href="http://www.loc.gov/">The Library of Congress</a>&nbsp;&raquo;&nbsp;<a href="http://www.loc.gov/standards/">Standards</a>&nbsp;&raquo;&nbsp;<span class="selected">EAD</span></div></td>
+  <div class="sitenav"><a href="http://lcnetdev.github.io/">The Library of Congress</a>&nbsp;&raquo;&nbsp;<a href="http://lcnetdev.github.io/standards/">Standards</a>&nbsp;&raquo;&nbsp;<span class="selected">EAD</span></div></td>
 <td width="116"><select name="qp" tabindex="1">
 <option value="url:/ead" selected>EAD Official Site Pages</option>
 <option value="url:/standards url:/ead url:/marc">Library of Congress Standards Pages</option>
@@ -64,7 +64,7 @@
   
   Use <a href="http://listserv.loc.gov/cgi-bin/wa?SUBED1=ead&A=1">this  link</a> to subscribe, unsubscribe, or change your settings to the EAD Listerv </p>
   
-  <p><a href="http://www.loc.gov/ead/eadlist.html#agreement">EAD Listserv Signup Agreement</a></a></p>
+  <p><a href="http://lcnetdev.github.io/ead/eadlist.html#agreement">EAD Listserv Signup Agreement</a></a></p>
   
   
   <p><a href="https://listserv.loc.gov/cgi-bin/wa?A0=EAD">View EAD Listserv Archive</a></p>
@@ -132,7 +132,7 @@ Encoded Archival Description (EAD) is an XML standard for encoding archival find
 
 <p class="homeblurb">The EAD Document Type Definition (DTD) is a standard
     for encoding archival finding aids using Extensible Markup Language (XML).
-    The standard is maintained in the <a href="http://www.loc.gov/marc/ndmso.html">Network
+    The standard is maintained in the <a href="http://lcnetdev.github.io/marc/ndmso.html">Network
     Development and MARC
 Standards
 Office</a> of the Library of Congress (LC) in partnership with the <a href=
@@ -145,8 +145,8 @@ Office</a> of the Library of Congress (LC) in partnership with the <a href=
 </td></tr>
 
 </table>
-<table align="center" class="footer" cellpadding="0" cellspacing="0" border="0"><tr valign="top"><td><div class="sitenav"><a href="http://www.loc.gov/">The
-          Library of Congress</a>&nbsp;&raquo;&nbsp;<a href="http://www.loc.gov/standards/">Standards</a>&nbsp;&raquo;&nbsp;<span class="selected">EAD</span></div>
+<table align="center" class="footer" cellpadding="0" cellspacing="0" border="0"><tr valign="top"><td><div class="sitenav"><a href="http://lcnetdev.github.io/">The
+          Library of Congress</a>&nbsp;&raquo;&nbsp;<a href="http://lcnetdev.github.io/standards/">Standards</a>&nbsp;&raquo;&nbsp;<span class="selected">EAD</span></div>
       <br>
   <span class="sitenav">
   <!-- #BeginDate format:Am1 -->April 10, 2019<!-- #EndDate -->
