--- a/standards/alto/description.html
+++ b/standards/alto/description.html
@@ -124,7 +124,7 @@
                     <td>
                         <span id="lcDate" class="sitenav">June 8, 2016 </span></td>                
                     <td align="right">
-                        <div class="contactus"><a href="http://www.loc.gov/homepage/legal.html">Legal</a> | <a href="http://www.loc.gov/global/disclaim.html">External Link Disclaimer</a></div>
+                        <div class="contactus"><a href="http://lcnetdev.github.io/homepage/legal.html">Legal</a> | <a href="http://lcnetdev.github.io/global/disclaim.html">External Link Disclaimer</a></div>
                     </td>                    
                     
                 </tr>
