--- a/standards/alto/index.html
+++ b/standards/alto/index.html
@@ -119,12 +119,12 @@
         </li>
 		<li>Versions, Namespaces and Schema Locations
 		<p style="font-weight:normal;">ALTO schemas will be updated by whole numbers upon making changes that break backward compatibility (version 1 to version 2), and decimals for changes that will not (2.0 to 2.1). The namespace itself will also only change on major versions (ns-v2 to ns-v3). The file location for the schemas will follow this pattern:
-		Each major version will have its own subdirectory at www.loc.gov/alto, and the current schema (minor version) will be called alto.xsd in that directory. </p>
+		Each major version will have its own subdirectory at lcnetdev.github.io/alto, and the current schema (minor version) will be called alto.xsd in that directory. </p>
 		<p style="font-weight:normal;">There will also be a copy for direct reference to a particular minor version within that directory, including an exact copy of the current version. 
 		 For example, the once current version 3.0 was at
- http://www.loc.gov/alto/v3/alto.xsd and at  http://www.loc.gov/alto/v3/alto-3-0.xsd. All previous versions will continue to be available in other subdirectories with their fully versioned names.</p>
+ http://lcnetdev.github.io/alto/v3/alto.xsd and at  http://lcnetdev.github.io/alto/v3/alto-3-0.xsd. All previous versions will continue to be available in other subdirectories with their fully versioned names.</p>
  <p style="font-weight:normal;">To ensure this does not break current practice, 
- the version  http://www.loc.gov/alto/alto.xsd (version 2.1 in August 2014) will continue to exist, but will no longer be updated to reflect the current version.</p>
+ the version  http://lcnetdev.github.io/alto/alto.xsd (version 2.1 in August 2014) will continue to exist, but will no longer be updated to reflect the current version.</p>
         <li>XML Schemas
           <ul>
 		      <li>
@@ -229,7 +229,7 @@
   <tr>
   
     <td >
-     <div class="contactus"><a href="http://www.loc.gov/homepage/legal.html">Legal</a> | <a href="http://www.loc.gov/global/disclaim.html">External Link Disclaimer</a></div>
+     <div class="contactus"><a href="http://lcnetdev.github.io/homepage/legal.html">Legal</a> | <a href="http://lcnetdev.github.io/global/disclaim.html">External Link Disclaimer</a></div>
      <span id="lcDate" class="sitenav">May 26, 2016 </span>
     </td>
   </tr>
