--- a/ead/ead.html
+++ b/ead/ead.html
@@ -8,7 +8,7 @@
 @import url(ead-base.css);
 </style>
 <meta http-equiv="Content-Language" content="en-us">
-<link rel="shortcut icon" href="http://www.loc.gov:8081/standards/ead/images/favicon.ico">
+<link rel="shortcut icon" href="http://lcnetdev.github.io:8081/standards/ead/images/favicon.ico">
 <meta name="keywords" content="">
 <meta name="description" content="">
 </head>
@@ -29,7 +29,7 @@
 <input type="hidden" name="rq" value="0">
 <input type="hidden" name="qc" value="">
 <table align="center" class="header" cellpadding="0" cellspacing="0" border="0"><tr><td width="475"><a id="skip" href="#skip_menu">&nbsp;</a>
-  <div class="sitenav"><a href="http://www.loc.gov/">The Library of Congress</a>&nbsp;&raquo;&nbsp;<a href="http://www.loc.gov/standards/">Standards</a>&nbsp;&raquo;&nbsp;<span class="selected">EAD</span></div></td>
+  <div class="sitenav"><a href="http://lcnetdev.github.io/">The Library of Congress</a>&nbsp;&raquo;&nbsp;<a href="http://lcnetdev.github.io/standards/">Standards</a>&nbsp;&raquo;&nbsp;<span class="selected">EAD</span></div></td>
 <td width="116"><select name="qp" tabindex="1">
 <option value="url:/ead" selected>EAD Official Site Pages</option>
 <option value="url:/standards url:/ead url:/marc">Standards Pages</option>
@@ -76,9 +76,9 @@
 <h2 class="homepage">&nbsp;<img src="images/left-bracket.gif" alt="" width="9" height="13" hspace="2">&nbsp;version
   1.0 (1998) - superseded documentation&nbsp;&nbsp;<img src="images/right-bracket.gif" alt="" width="9" height="13"></h2>
 <ul>
-  <li><a href="http://www.loc.gov/ead/tglib1998/index.html">EAD  Tag Library, version
+  <li><a href="http://lcnetdev.github.io/ead/tglib1998/index.html">EAD  Tag Library, version
       1.0 (1998)</a>
-  <li><a href="http://www.loc.gov/ead/ag/aghome.html">EAD Application Guidelines, version 1.0 (1998)</a>  
+  <li><a href="http://lcnetdev.github.io/ead/ag/aghome.html">EAD Application Guidelines, version 1.0 (1998)</a>  
 </ul>
 <br>
 <h2 class="homepage">&nbsp;<img src="images/left-bracket.gif" alt="" width="9" height="13" hspace="2">&nbsp;tools and helper files&nbsp;<img src="images/right-bracket.gif" alt="" width="9" height="13">&nbsp;</h2>
@@ -90,7 +90,7 @@
 <hr class="dashed" width="98%">
 <p class="homeblurb">The EAD Document Type Definition (DTD) is a standard
     for encoding archival finding aids using Extensible Markup Language (XML).
-    The standard is maintained in the <a href="http://www.loc.gov/marc/ndmso.html">Network
+    The standard is maintained in the <a href="http://lcnetdev.github.io/marc/ndmso.html">Network
     Development and MARC
 Standards
 Office</a> of the Library of Congress (LC) in partnership with the <a href=
@@ -101,8 +101,8 @@ Office</a> of the Library of Congress (LC) in partnership with the <a href=
 </td></tr>
 
 </table>
-<table align="center" class="footer" cellpadding="0" cellspacing="0" border="0"><tr valign="top"><td><div class="sitenav"><a href="http://www.loc.gov/">The
-          Library of Congress</a>&nbsp;&raquo;&nbsp;<a href="http://www.loc.gov/standards/">Standards</a>&nbsp;&raquo;&nbsp;<span class="selected">EAD</span></div>
+<table align="center" class="footer" cellpadding="0" cellspacing="0" border="0"><tr valign="top"><td><div class="sitenav"><a href="http://lcnetdev.github.io/">The
+          Library of Congress</a>&nbsp;&raquo;&nbsp;<a href="http://lcnetdev.github.io/standards/">Standards</a>&nbsp;&raquo;&nbsp;<span class="selected">EAD</span></div>
       <br>
   <span class="sitenav">
   <!-- #BeginDate format:Am1 -->June 6, 2006<!-- #EndDate -->
