--- a/ead/ead2002a.html
+++ b/ead/ead2002a.html
@@ -39,7 +39,7 @@ by the Library of Congress.">
   <table align="center" class="header" cellpadding="0" cellspacing="0" border="0">
     <tr>
       <td width="475"><a id="skip" href="#skip_menu">&nbsp;</a>
-        <div class="sitenav"><a href="http://www.loc.gov/">The Library of Congress</a>&nbsp;&raquo;&nbsp;<a href="http://www.loc.gov/standards/">Standards</a>&nbsp;&raquo;&nbsp;<a href="index.html">EAD</a></div>
+        <div class="sitenav"><a href="http://lcnetdev.github.io/">The Library of Congress</a>&nbsp;&raquo;&nbsp;<a href="http://lcnetdev.github.io/standards/">Standards</a>&nbsp;&raquo;&nbsp;<a href="index.html">EAD</a></div>
       </td>
       <td width="116"><select name="qp" tabindex="1">
           <option value="url:/ead" selected>EAD Official Site Pages</option>
@@ -114,7 +114,7 @@ by the Library of Congress.">
       <p>To start creating your own Encoded Archival Descriptions, you will need
         various files and support documents. Most are available to you electronically
         via FTP (File Transfer Protocol) from an anonymous file server. The EAD
-        Tag Library is currently available as both a print and <a href="http://www.loc.gov/ead/tglib/index.html">Web
+        Tag Library is currently available as both a print and <a href="http://lcnetdev.github.io/ead/tglib/index.html">Web
         version</a>. Due to the length of the EAD Tag Library, we recommend you
         purchase a copy of the printed document which is available from the <a
 href="http://www.archivists.org/catalog/pubDetail.asp?objectID=235">Society of
@@ -183,7 +183,7 @@ href="http://www.archivists.org/catalog/pubDetail.asp?objectID=235">Society of
       <p>If you do not have access to FTP or are not able to download the files,
         you may request a diskette containing these files by contacting the Library
         of Congress, <a href=
-"http://www.loc.gov/marc/ndmso.html">Network Development and MARC Standards Office
+"http://lcnetdev.github.io/marc/ndmso.html">Network Development and MARC Standards Office
         (NDMSO)</a>, who will be acting as the maintenance agency for this standard. </p>
       <p>We encourage you to join the large number of users of the EAD DTD if
         you are not already among that growing group. We also look forward to
@@ -202,7 +202,7 @@ href="http://www.archivists.org/catalog/pubDetail.asp?objectID=235">Society of
 </table>
 <table align="center" class="footer" cellpadding="0" cellspacing="0" border="0">
   <tr valign="top">
-    <td><div class="sitenav"><a href="http://www.loc.gov/">The Library of Congress</a>&nbsp;&raquo;&nbsp;<a href="http://www.loc.gov/standards/">Standards</a>&nbsp;&raquo;&nbsp;<span class="selected">EAD</span></div>
+    <td><div class="sitenav"><a href="http://lcnetdev.github.io/">The Library of Congress</a>&nbsp;&raquo;&nbsp;<a href="http://lcnetdev.github.io/standards/">Standards</a>&nbsp;&raquo;&nbsp;<span class="selected">EAD</span></div>
       <br>
       <span class="sitenav">
       <!-- #BeginDate format:Am1 -->June 5, 2006<!-- #EndDate -->
