--- a/ead/eadwg.html
+++ b/ead/eadwg.html
@@ -33,7 +33,7 @@
 <input type="hidden" name="rq" value="0">
 <input type="hidden" name="qc" value="">
 <table align="center" class="header" cellpadding="0" cellspacing="0" border="0"><tr><td width="475"><a id="skip" href="#skip_menu">&nbsp;</a>
-  <div class="sitenav"><a href="http://www.loc.gov/">The Library of Congress</a>&nbsp;&raquo;&nbsp;<a href="http://www.loc.gov/standards/">Standards</a>&nbsp;&raquo;&nbsp;<a href="index.html">EAD</a></div></td>
+  <div class="sitenav"><a href="http://lcnetdev.github.io/">The Library of Congress</a>&nbsp;&raquo;&nbsp;<a href="http://lcnetdev.github.io/standards/">Standards</a>&nbsp;&raquo;&nbsp;<a href="index.html">EAD</a></div></td>
 <td width="116"><select name="qp" tabindex="1">
 <option value="url:/ead" selected>EAD Official Site Pages</option>
 <option value="url:/standards url:/ead url:/marc">Standards Pages</option>
@@ -51,7 +51,7 @@
 <div class="box">
   <P>For further information on the EAD, please contact:</P>
   <P>U.S. Library of Congress, <A
-href="http://www.loc.gov/marc/ndmso.html">Network Development and MARC Standards
+href="http://lcnetdev.github.io/marc/ndmso.html">Network Development and MARC Standards
       Office</A><BR>
   Washington, D.C. 20540-4402 U.S.A.<BR>
   TEL: +1-202-707-6237<BR>
@@ -224,8 +224,8 @@ href="http://www.loc.gov/marc/ndmso.html">Network Development and MARC Standards
 </tr>
 
 </table>
-<table align="center" class="footer" cellpadding="0" cellspacing="0" border="0"><tr valign="top"><td><div class="sitenav"><a href="http://www.loc.gov/">The
-          Library of Congress</a>&nbsp;&raquo;&nbsp;<a href="http://www.loc.gov/standards/">Standards</a>&nbsp;&raquo;&nbsp;<span class="selected">EAD</span></div>
+<table align="center" class="footer" cellpadding="0" cellspacing="0" border="0"><tr valign="top"><td><div class="sitenav"><a href="http://lcnetdev.github.io/">The
+          Library of Congress</a>&nbsp;&raquo;&nbsp;<a href="http://lcnetdev.github.io/standards/">Standards</a>&nbsp;&raquo;&nbsp;<span class="selected">EAD</span></div>
       <br>
   <span class="sitenav">
   <!-- #BeginDate format:Am1 -->August 13, 2010<!-- #EndDate -->
