--- a/standards/alto/template.html
+++ b/standards/alto/template.html
@@ -8,7 +8,7 @@
 @import url(alto-base.css);
 </style>
 <meta http-equiv="Content-Language" content="en-us" />
-<link rel="shortcut icon" href="http://www.loc.gov:8081/standards/alto/favicon.ico" />
+<link rel="shortcut icon" href="http://lcnetdev.github.io:8081/standards/alto/favicon.ico" />
 <meta name="Keywords" content="alto xml schema techical metadata optical character recognition ocr standards library congress" />
 <meta name="Description" content="ALTO is a XML Schema for technical metadata used with OCR scanning output. Standards (Library of Congress)" />
 </head>
@@ -29,7 +29,7 @@
 <input type="hidden" name="rq" value="0" />
 <input type="hidden" name="qc" value="" />
 <table align="center" class="header" cellpadding="0" cellspacing="0" border="0"><tr><td width="475"><a id="skip" href="#skip_menu">&nbsp;</a>
-  <div class="sitenav"><a href="http://www.loc.gov/">The Library of Congress</a>&nbsp;&raquo;&nbsp;<a href="http://www.loc.gov/standards/">Standards</a>&nbsp;&raquo;&nbsp;<span class="selected">ALTO</span></div></td>
+  <div class="sitenav"><a href="http://lcnetdev.github.io/">The Library of Congress</a>&nbsp;&raquo;&nbsp;<a href="http://lcnetdev.github.io/standards/">Standards</a>&nbsp;&raquo;&nbsp;<span class="selected">ALTO</span></div></td>
 <td width="116"><select name="qp" tabindex="1">
 <option value="url:/standards/alto" selected="selected">ALTO Web Pages</option>
 <option value="url:/standards url:/ead url:/marc">Standards Pages</option>
@@ -96,8 +96,8 @@
 </td>
 </tr>
 </table>
-<table align="center" class="footer" cellpadding="0" cellspacing="0" border="0"><tr valign="top"><td><div class="sitenav"><a href="http://www.loc.gov/">The 
-        Library of Congress</a>&nbsp;&raquo;&nbsp;<a href="http://www.loc.gov/standards/">Standards</a>&nbsp;&raquo;&nbsp;<span class="selected">ALTO</span></div>
+<table align="center" class="footer" cellpadding="0" cellspacing="0" border="0"><tr valign="top"><td><div class="sitenav"><a href="http://lcnetdev.github.io/">The 
+        Library of Congress</a>&nbsp;&raquo;&nbsp;<a href="http://lcnetdev.github.io/standards/">Standards</a>&nbsp;&raquo;&nbsp;<span class="selected">ALTO</span></div>
       <br />
   <span class="sitenav">
   <!-- #BeginDate format:Am1 -->July 31, 2009<!-- #EndDate -->
